--- a/scrapyd/requirements.txt
+++ b/scrapyd/requirements.txt
@@ -1,9 +1,74 @@
 pip>=19.1
 #Twisted==18.9.0
-scrapy
-scrapyd>=1.2.1
+
 scrapy-redis
 logparser>=0.8.2
 
 mysqlclient>=1.4.4
-SQLAlchemy>=1.3.6
+
+
+APScheduler==3.7.0
+attrs==21.2.0
+Automat==20.2.0
+autopep8==1.5.7
+beautifulsoup4==4.9.3
+bs4==0.0.1
+certifi==2021.5.30
+cffi==1.14.6
+charset-normalizer==2.0.4
+Click==7.0
+colorama==0.4.4
+configparser==5.0.2
+constantly==15.1.0
+crayons==0.4.0
+cryptography==3.4.7
+cssselect==1.1.0
+docker==5.0.2
+greenlet==1.1.1
+h2==3.2.0
+herokuify-scrapyd==1.0
+hpack==3.0.0
+hyperframe==5.2.0
+hyperlink==21.0.0
+idna==3.2
+incremental==21.3.0
+itemadapter==0.3.0
+itemloaders==1.0.4
+jmespath==0.10.0
+lxml==4.6.3
+parsel==1.6.0
+priority==1.3.0
+Protego==0.1.16
+psycopg2-binary==2.9.1
+pyasn1==0.4.8
+pyasn1-modules==0.2.8
+pycodestyle==2.7.0
+pycparser==2.20
+PyDispatcher==2.0.5
+pyOpenSSL==20.0.1
+python-dotenv==0.19.0
+pytz==2021.1
+PyYAML==5.4.1
+queuelib==1.6.1
+requests==2.26.0
+retrying==1.3.3
+scrapinghub==2.3.1
+Scrapy==2.5.0
+scrapyd==1.2.1
+scrapyd-client==1.2.0a1
+selenium==3.141.0
+service-identity==21.1.0
+shub==2.13.0
+six==1.16.0
+soupsieve==2.2.1
+SQLAlchemy==1.4.23
+toml==0.10.2
+tqdm==4.55.1
+Twisted==21.2.0
+tzlocal==2.1
+urllib3==1.26.6
+w3lib==1.22.0
+webdriver-manager==3.4.2
+websocket-client==1.2.1
+zope.interface==5.4.0
+scrapy-selenium==0.0.7
