--- a/scrapyd/requirements.txt
+++ b/scrapyd/requirements.txt
@@ -1,7 +1,6 @@
 pip>=19.1
 #Twisted==18.9.0
 
-scrapy-redis
 logparser>=0.8.2
 
 mysqlclient>=1.4.4
@@ -72,4 +71,4 @@ webdriver-manager==3.4.2
 websocket-client==1.2.1
 zope.interface==5.4.0
 scrapy-selenium==0.0.7
-
+scrapy-redis==0.7.1
